--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Namaste React</title>
-    <script src="./App.js" defer></script>
+    <script type="module" src="./App.js" defer></script>
     <link rel="stylesheet" href="./index.css">
   </head>
   <body>
     <div id="root">
+      <!-- After installing react using npm these CDN links are no more needed
       <script
         crossorigin
         src="https://unpkg.com/react@18/umd/react.development.js"
@@ -16,7 +17,7 @@
       <script
         crossorigin
         src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"
-      ></script>
+      ></script> -->
       
     </div>
   </body>
