--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <div id="root">
+      <h1> Not Rendered</h1>
       <!-- After installing react using npm these CDN links are no more needed
       <script
         crossorigin
